--- a/fccRandomQuote/style.css
+++ b/fccRandomQuote/style.css
@@ -10,21 +10,20 @@
 	margin-top: 150px;
 	border-radius: 5px;
 }
-.quote{
-	display: block;
-	width: 400px;
-	height: auto;
-	margin: 0 auto;
-	padding-top: 60px;
-	font-size: 1.5em;
-}
-.author{
-	display: block;
-	width: 200px;
+.wrapper{
+	width: 500px;
 	margin: 0 auto;
 }
 .buttons{
-	display: inline-block;
-	margin: 0 auto 40px auto;
-	width: 700px;
+	margin: 0 auto;
+	width: 500px;
+}
+.quote{
+	width: 500px;
+	height: auto;
+	font-size: 1.5em;
+}
+.author{
+	text-align: right;
+	width: 500px;
 }
